# paper_agent

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/skills/byted-web-search/: SKILL.md
.claude/skills/codegraph/: SKILL.md
.claude/skills/paper-agent/: SKILL.md
.codegraph/: daemon.pid
.github/workflows/: ci.yml  deploy.yml
.opencode/state/: codegraph-session-runtime.json
docs/: Tricking_Autonomous_Driving_Systems_via_Adversarial_Taillights.md  book-main.md
docs/assessment/: jd-skills-mapping.md
docs/development/: acceptance-criteria.md  agent-architecture-v4.md  agent-manifest.md  agent-runloop.md  anti-hallucination.md  api-reference.md  architecture-upgrade-v5.md  architecture.md  backend-development-plan.md  data-migration-plan.md  database-architecture.md  deployment.md  development-plan.md  gap-analysis.md  intent-routing-design.md  knowledge-qa.md  main-agent-v2-design.md  main-agent.md  memory-system.md  phase2-plan.md  plangraph-routing.md  tech-selection.md  v5-development-plan.md  websocket-protocol.md
docs/frontend/: vue-acceptance-criteria.md  vue-design-spec.md  vue-product-spec.md
docs/product/: product-architecture-plan.md  product-spec.md  python-research-assistant.md  智驭研_AI科研助理_产品重构方案.md  智驭研_重构方案_v3.md
docs/reference/: volcengine-agent-plan-api.md  volcengine-websearch-api.md
logs/tasks/: test-err.jsonl  test-search.jsonl
nginx/: default.conf
scripts/: backup-db.sh  batch_convert_pdfs.py  batch_import_pdfs.py  batch_index_papers.py  deploy.sh  docker-enter.sh  docker-start.sh  health_check.py  init_db.sql  migrate_to_postgres.py  migrate_v41.sql  run_evaluation.py  start-all.sh  start.py  upload_all.py  upload_all_pdf.py  zotero_export.py
scripts/migrations/: 001_v41.sql  002_agent_state.sql
src/paper_search/: __init__.py  config.py  engine.py  logging_setup.py  models.py
src/paper_search/agent/: __init__.py  agent.py  agent_error.py  agent_loop.py  agent_state.py  agent_worker.py  auto_pipeline.py  celery_app.py  celery_tasks.py  checkpointer.py  chroma_store.py  chunker.py  daemon.py  db.py  evaluator.py  event_bus.py  external_validator.py  journal_ranker.py  knowledge.py  llm_client.py  llm_client_v2.py  main_agent.py  main_agent_prompts.py  memory.py  message_trim.py  migrate.py  outbox.py  pdf_converter.py  pg_checkpointer.py  pg_store.py  pgdb.py  pgvector_store.py  plangraph.py  prompt_optimizer.py  react_executor.py  reporter.py  reranker.py  store.py  sub_agent.py  summarizer.py  (+7 more)
src/paper_search/api/: __init__.py  apns_pusher.py  app.py  auth.py  message_store.py  middleware.py  outbox_poller.py  routes.py  ws.py  ws_handler.py
src/paper_search/cli/: __init__.py  clean_cmd.py  common.py  convert_cmd.py  download_cmd.py  evaluate_cmd.py  export_cmd.py  index_cmd.py  main.py  rank_cmd.py  search_cmd.py  status_cmd.py  survey_cmd.py
src/paper_search/downloaders/: __init__.py  browser_downloader.py  filename_utils.py  http_downloader.py
src/paper_search/mcp/: __init__.py  server.py
src/paper_search/providers/: __init__.py  arxiv_provider.py  base.py  (+5 more)
tests/: test_anti_hallucination.py  test_celery_tasks.py  test_ingest_agent.py  test_main_agent_safety_intent.py  test_sub_agent_dispatch.py  test_subscription.py  test_task_messages.py  test_v4_api.py  test_v5_graph.py  test_v5_supervisor.py  test_video_agent.py  test_ws_client.py
(+19 files in other folders)
