[project]
name = "paper-search"
version = "0.1.0"
description = "学术论文搜索与 PDF 下载系统 — 支持 arXiv、PubMed、Semantic Scholar、CNKI、IEEE、ScienceDirect 等多源"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "chaocaiwei"}]

[project.scripts]
paper-search = "paper_search.cli.search_cmd:main"
paper-download = "paper_search.cli.download_cmd:main"
paper-convert = "paper_search.cli.convert_cmd:main"
paper-index = "paper_search.cli.index_cmd:main"
paper-evaluate = "paper_search.cli.evaluate_cmd:main"
paper-rank = "paper_search.cli.rank_cmd:main"
paper-survey = "paper_search.cli.survey_cmd:main"
paper-export = "paper_search.cli.export_cmd:main"
paper-status = "paper_search.cli.status_cmd:main"
paper-clean = "paper_search.cli.clean_cmd:main"
# 保留旧入口（向后兼容）
paper-search-legacy = "paper_search.cli.main:main"
# API Server
paper-agent-api = "paper_search.api.app:main"

[project.optional-dependencies]
# Free API providers
arxiv = ["arxiv>=2.3"]
pubmed = ["biopython>=1.83", "metapub>=0.6"]
# Browser automation for institutional access
playwright = ["playwright>=1.40"]
# CLI output formatting
rich = ["rich>=13"]
# Agent Framework
agent = [
    "langgraph>=0.6.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain-core>=0.3.0",
    "langmem>=0.0.10",
]
# Async Task Queue
celery = ["celery[redis]>=5.4", "redis>=5.0"]
# Web API
web = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]
# CAPTCHA handling (CNKI)
ocr = ["pytesseract>=0.3"]
# Video processing (yt-dlp + Whisper + CloakBrowser)
video = ["yt-dlp>=2024.12", "faster-whisper>=1.1.0", "cloakbrowser>=0.3"]
# All deps
all = [
    "httpx>=0.27",
    "pydantic>=2",
    "arxiv>=2.3",
    "biopython>=1.83",
    "metapub>=0.6",
    "playwright>=1.40",
    "rich>=13",
    "pytesseract>=0.3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "langgraph>=0.6.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain-core>=0.3.0",
    "langmem>=0.0.10",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "yt-dlp>=2024.12",
    "faster-whisper>=1.1.0",
    "cloakbrowser>=0.3",
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "asyncio: async test cases (auto-detected by pytest-asyncio)",
]
